--- a/TP_Front/src/app/components/home/home.component.html
+++ b/TP_Front/src/app/components/home/home.component.html
@@ -2,6 +2,7 @@
     <h1 align="center">Welcome!</h1>
     <p>Please login to use the website</p>
     <button class="button2" role="button" routerLink="/login">Login</button>
+    <button class="button2" role="button" routerLink="/register">Register</button>
 </div>
 <div *ngIf="isLoged">
     <div class="header">
