--- a/TP_Front/src/app/components/register/register.component.html
+++ b/TP_Front/src/app/components/register/register.component.html
@@ -1,17 +1,16 @@
+
 <div class="login-page">
     <div class="form">
       <div class="login">
         <div class="login-header">
-          <h3>LOGIN</h3>
-          <p>Please enter your credentials to login.</p>
+          <h3>REGISTER</h3>
+          <p>Please enter your credentials to register.</p>
         </div>
       </div>
-      <form class="login-form" [formGroup]="loginUser" (ngSubmit)="onLogin()">
+      <form class="login-form" [formGroup]="registerUser" (ngSubmit)="onRegister()">
         <input type="text" placeholder="Username" id="Username" name="Username" formControlName="UserName" required />
         <input type="password" placeholder="Password" id="password" name="password" formControlName="Password" required/>
-        <button type="submit" [disabled]="loginUser.invalid" >Login</button>
-        <p>Don't have an account?</p>
-        <button routerLink="/register" >Register</button>
+        <button type="submit" [disabled]="registerUser.invalid" >Register</button>
       </form>
     </div>
   </div>
